--- a/dashboard.html
+++ b/dashboard.html
@@ -1,125 +1,140 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>لوحة التحكم - نظام OMA</title>
-<style>
-:root {
-  --primary: #004aad;
-  --accent: #ffcc33;
-  --bg: #f5f9ff;
-  --card: #fff;
-}
-body {
-  margin: 0;
-  font-family: 'Cairo', sans-serif;
-  background: var(--bg);
-  direction: rtl;
-}
-header {
-  background: linear-gradient(90deg, var(--primary), #007bff);
-  color: white;
-  padding: 15px;
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-}
-.container {
-  max-width: 900px;
-  margin: 40px auto;
-  padding: 20px;
-}
-.card {
-  background: var(--card);
-  border-radius: 10px;
-  padding: 20px;
-  box-shadow: 0 6px 16px rgba(0,0,0,0.08);
-  text-align: center;
-}
-h2 {
-  color: var(--primary);
-}
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-  gap: 16px;
-  margin-top: 20px;
-}
-.btn {
-  background: var(--primary);
-  color: white;
-  border: none;
-  padding: 12px;
-  border-radius: 8px;
-  font-weight: bold;
-  cursor: pointer;
-  transition: 0.3s;
-}
-.btn:hover {
-  background: #003a8c;
-}
-.logout {
-  background: #ff5b5b;
-}
-.logout:hover {
-  background: #d84343;
-}
-footer {
-  text-align: center;
-  margin-top: 50px;
-  color: #777;
-  font-size: 14px;
-}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>لوحة التحكم - نظام OMA</title>
+  <style>
+    body {
+      font-family: 'Cairo', sans-serif;
+      background: #f5f9ff;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #004aad;
+      color: white;
+      text-align: center;
+      padding: 15px 0;
+      font-size: 20px;
+      font-weight: bold;
+    }
+
+    .container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+      padding: 40px;
+      justify-content: center;
+    }
+
+    .card {
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      text-align: center;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      transition: 0.3s;
+      cursor: pointer;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+      background: #eef4ff;
+    }
+
+    .card h3 {
+      color: #004aad;
+    }
+
+    #logoutBtn {
+      background-color: #d32f2f;
+      color: white;
+      border: none;
+      padding: 12px 20px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 16px;
+      transition: 0.3s;
+      display: block;
+      margin: 30px auto;
+    }
+
+    #logoutBtn:hover {
+      background-color: #b71c1c;
+    }
+  </style>
 </head>
 <body>
-<header>🎓 نظام OMA لإدارة المعاهد - لوحة التحكم</header>
+  <header>👋 مرحباً بك في لوحة التحكم - نظام OMA</header>
 
-<div class="container">
-  <div class="card">
-    <h2>مرحباً بك في لوحة الإدارة 👋</h2>
-    <p id="userEmail" style="color:#444;margin-top:-8px"></p>
-    <div class="grid">
-      <button class="btn" onclick="goTo('students.html')">👨‍🎓 إدارة الطلاب</button>
-      <button class="btn" onclick="goTo('teachers.html')">👨‍🏫 إدارة الأساتذة</button>
-      <button class="btn" onclick="goTo('classes.html')">📚 إدارة الحصص</button>
-      <button class="btn" onclick="goTo('teacher_attendance.html')">🕓 الحضور والغياب</button>
-      <button class="btn" onclick="goTo('settings.html')">⚙️ الإعدادات</button>
-      <button class="btn logout" onclick="logout()">🚪 تسجيل الخروج</button>
-    </div>
+  <div class="container">
+    <div class="card" id="studentsCard"><h3>📚 إدارة الطلاب</h3></div>
+    <div class="card" id="teachersCard"><h3>👨‍🏫 إدارة الأساتذة</h3></div>
+    <div class="card" id="classesCard"><h3>🏫 إدارة الحصص</h3></div>
+    <div class="card" id="attendanceCard"><h3>🕓 الحضور والغياب</h3></div>
+    <div class="card" id="settingsCard"><h3>⚙️ الإعدادات</h3></div>
   </div>
-</div>
 
-<footer>© 2025 نظام OMA - جميع الحقوق محفوظة</footer>
+  <button id="logoutBtn">🔓 تسجيل الخروج</button>
 
-<script type="module">
-import { initializeApp } from "./firebase-config.js";
-import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
+    import { 
+      getAuth, 
+      onAuthStateChanged, 
+      signOut 
+    } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 
-const auth = getAuth(initializeApp);
+    // 🔹 إعداد Firebase
+    const firebaseConfig = {
+      apiKey: "AIzaSyDt2HAOKr3iko8V-u392vh2R2my14km7ag",
+      authDomain: "oma2-d36fa.firebaseapp.com",
+      projectId: "oma2-d36fa",
+      storageBucket: "oma2-d36fa.firebasestorage.app",
+      messagingSenderId: "774171603105",
+      appId: "1:774171603105:web:91f2a5f44c4dde684080e0",
+      measurementId: "G-QHPZG4JLB8"
+    };
 
-// التحقق من حالة تسجيل الدخول
-onAuthStateChanged(auth, (user) => {
-  if (!user) {
-    window.location.href = "login.html"; // إذا لم يكن مسجلاً، يرجع لصفحة الدخول
-  } else {
-    document.getElementById("userEmail").textContent = "المستخدم: " + user.email;
-  }
-});
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
 
-// الانتقال إلى صفحات النظام
-window.goTo = (page) => {
-  window.location.href = page;
-};
+    // ✅ منع الدخول إلا بعد تسجيل الدخول
+    onAuthStateChanged(auth, (user) => {
+      if (!user) {
+        window.location.href = "login.html";
+      }
+    });
 
-// تسجيل الخروج
-window.logout = async () => {
-  if (confirm("هل تريد تسجيل الخروج؟")) {
-    await signOut(auth);
-    window.location.href = "login.html";
-  }
-};
-</script>
+    // 🔘 التنقل بين الصفحات
+    document.getElementById("studentsCard").addEventListener("click", () => {
+      window.location.href = "students.html";
+    });
+
+    document.getElementById("teachersCard").addEventListener("click", () => {
+      window.location.href = "teachers.html";
+    });
+
+    document.getElementById("classesCard").addEventListener("click", () => {
+      window.location.href = "classes.html";
+    });
+
+    document.getElementById("attendanceCard").addEventListener("click", () => {
+      window.location.href = "attendance.html";
+    });
+
+    document.getElementById("settingsCard").addEventListener("click", () => {
+      window.location.href = "settings.html";
+    });
+
+    // 🔒 زر تسجيل الخروج
+    document.getElementById("logoutBtn").addEventListener("click", async () => {
+      await signOut(auth);
+      alert("تم تسجيل الخروج بنجاح");
+      window.location.href = "login.html";
+    });
+  </script>
 </body>
 </html>
