--- a/students.html
+++ b/students.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>نظام OMA المتطور - إدارة الطلاب</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>نظام OMA - إدارة الطلاب</title>
 <style>
-:root{
+:root {
   --primary:#004aad;
   --accent:#ffcc33;
   --bg:#f5f9ff;
   --card:#fff;
 }
-*{box-sizing:border-box}
+*{box-sizing:border-box;}
 body{
   font-family:'Cairo',sans-serif;
   margin:0;background:linear-gradient(180deg,var(--bg),#fff);
@@ -19,151 +19,217 @@ body{
 }
 header{
   background:linear-gradient(90deg,var(--primary),#007bff);
-  color:#fff;padding:18px 16px;text-align:center;font-size:20px;font-weight:700;
-  box-shadow:0 3px 12px rgba(2,20,40,0.08);
+  color:#fff;padding:16px;text-align:center;font-size:20px;font-weight:700;
+  display:flex;justify-content:space-between;align-items:center;
 }
+header button {
+  background:#ff5555;
+  border:none;
+  color:white;
+  padding:8px 14px;
+  border-radius:8px;
+  cursor:pointer;
+  font-weight:bold;
+  transition:0.3s;
+}
+header button:hover { background:#d63030; }
+
 .wrap{max-width:1200px;margin:22px auto;padding:12px;}
 .controls{display:flex;gap:12px;flex-wrap:wrap;margin-bottom:14px;align-items:center;}
-.card{background:var(--card);border-radius:10px;padding:14px;box-shadow:0 6px 18px rgba(6,20,30,0.06);flex:1}
-.form-grid{display:flex;flex-wrap:wrap;gap:10px}
-input[type="text"],input[type="tel"],input[type="number"],select,textarea,.subject-field{
+.card{background:var(--card);border-radius:10px;padding:14px;box-shadow:0 6px 18px rgba(6,20,30,0.06);flex:1;}
+input, select, textarea {
   padding:10px;border:1px solid #d6dde9;border-radius:8px;font-size:15px;width:100%;
 }
-.two{width:calc(50% - 6px)}
-.three{width:calc(33.333% - 8px)}
-label{display:block;margin-bottom:6px;font-size:13px;color:#37474f}
-.btn{background:var(--primary);color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700}
-.btn.warn{background:#ff7043}
-.btn.ghost{background:transparent;color:var(--primary);border:1px solid rgba(0,74,173,0.12)}
-.btn.small{padding:6px 8px;font-size:13px;border-radius:6px}
-.add-subj{display:inline-block;margin-top:6px}
-table{width:100%;border-collapse:collapse;margin-top:12px}
-th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px}
-th{background:var(--primary);color:#fff}
-.actions button{margin:0 6px}
-.badge{display:inline-block;padding:4px 8px;border-radius:999px;background:#eef6ff;color:var(--primary);font-weight:700}
-.filters{display:flex;gap:8px;flex-wrap:wrap;align-items:center}
-.right{display:flex;gap:8px;align-items:center}
-.checkbox{width:18px;height:18px}
-@media(max-width:900px){
-  .two,.three{width:100%}
-  .controls{flex-direction:column;align-items:stretch}
+label{display:block;margin-bottom:6px;font-size:13px;color:#37474f;}
+.btn{background:var(--primary);color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700;}
+.btn.warn{background:#ff7043;}
+.btn.ghost{background:transparent;color:var(--primary);border:1px solid rgba(0,74,173,0.12);}
+.btn.small{padding:6px 8px;font-size:13px;border-radius:6px;}
+table{width:100%;border-collapse:collapse;margin-top:12px;}
+th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px;}
+th{background:var(--primary);color:#fff;}
+.modal {
+  position:fixed;left:0;top:0;right:0;bottom:0;
+  background:rgba(0,0,0,0.45);display:none;align-items:center;justify-content:center;z-index:9999;
 }
-@media print{
-  body{background:white;padding:0}
-  header,.controls,.card .form-grid,.filters,.actions,.modal{display:none!important}
-  .print-page{box-shadow:none;margin:0;padding:0}
+.modal.open{display:flex;}
+.modal .box{background:white;padding:18px;border-radius:10px;max-width:720px;width:94%;max-height:90vh;overflow:auto;}
+.badge{display:inline-block;padding:4px 8px;border-radius:999px;background:#eef6ff;color:var(--primary);font-weight:700;}
+@media (max-width:900px){
+  .controls{flex-direction:column;align-items:stretch;}
 }
-.modal{position:fixed;left:0;top:0;right:0;bottom:0;background:rgba(0,0,0,0.45);display:none;align-items:center;justify-content:center;z-index:9999;}
-.modal.open{display:flex}
-.modal .box{background:white;padding:18px;border-radius:10px;max-width:720px;width:94%;max-height:90vh;overflow:auto}
-.flex{display:flex;gap:8px;align-items:center}
 </style>
 </head>
 <body>
-<header>نظام OMA - إدارة الطلاب (متطور)</header>
+
+<header>
+  <div>📚 نظام OMA - إدارة الطلاب</div>
+  <button id="logoutBtn">تسجيل الخروج</button>
+</header>
+
 <div class="wrap">
 
-<!-- أزرار التحكم -->
-<div class="controls">
-  <div style="flex:1" class="card">
-    <div style="display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap">
-      <div>
-        <strong>أضف طالب جديد</strong>
-        <div style="font-size:13px;color:#546e7a">املأ الحقول ثم اضغط حفظ</div>
+  <!-- 🔹 قسم إضافة طالب -->
+  <div class="controls">
+    <div style="flex:1" class="card">
+      <div style="display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap">
+        <div>
+          <strong>أضف طالب جديد</strong>
+          <div style="font-size:13px;color:#546e7a">املأ الحقول ثم اضغط حفظ</div>
+        </div>
+        <div class="right">
+          <input id="searchInput" placeholder="بحث بالاسم أو الهاتف..." style="padding:8px;border-radius:8px;border:1px solid #e0e6ef" />
+          <button id="refreshBtn" class="btn">تحديث</button>
+        </div>
       </div>
-      <div class="right">
-        <input id="searchInput" placeholder="بحث بالاسم أو الهاتف..." style="padding:8px;border-radius:8px;border:1px solid #e0e6ef" />
-        <button id="refreshBtn" class="btn">تحديث</button>
-      </div>
-    </div>
 
-    <form id="studentForm" style="margin-top:12px">
-      <div class="form-grid">
-        <div class="two"><label>الاسم الكامل</label><input id="name" type="text" required></div>
-        <div class="two"><label>رقم الموبايل</label><input id="phone" type="tel" required></div>
-        <div class="two"><label>العنوان</label><input id="address" type="text"></div>
-        <div class="two"><label>اسم المدرسة</label><input id="school" type="text"></div>
-        <div class="two"><label>المرحلة الدراسية</label><input id="stage" type="text"></div>
-        <div class="two"><label>المجموعة / الكروب</label><input id="group" type="text" placeholder="مثال: A أو 101"></div>
-        <div style="width:100%">
+      <form id="studentForm" style="margin-top:12px">
+        <div class="form-grid">
+          <label>الاسم الكامل</label>
+          <input id="name" type="text" required />
+
+          <label>رقم الموبايل</label>
+          <input id="phone" type="tel" required />
+
+          <label>العنوان</label>
+          <input id="address" type="text" />
+
+          <label>اسم المدرسة</label>
+          <input id="school" type="text" />
+
+          <label>المرحلة الدراسية</label>
+          <input id="stage" type="text" />
+
+          <label>المجموعة</label>
+          <input id="group" type="text" />
+
           <label>المواد (أضف أكثر من مادة)</label>
           <div id="subjectsContainer" style="display:flex;flex-wrap:wrap;gap:8px"></div>
-          <div style="margin-top:8px"><button id="addSubjectBtn" type="button" class="btn ghost small add-subj">➕ إضافة مادة</button></div>
-        </div>
-        <div class="two"><label>إجمالي الأقساط (اختياري)</label><input id="totalFees" type="number" min="0"></div>
-        <div class="two"><label>ملاحظة / وصف الطالب</label><input id="note" type="text"></div>
-        <div style="width:100%;display:flex;gap:8px;justify-content:flex-end">
+          <button id="addSubjectBtn" type="button" class="btn ghost small add-subj">➕ إضافة مادة</button>
+
+          <label>إجمالي الأقساط</label>
+          <input id="totalFees" type="number" min="0" />
+
+          <label>ملاحظات</label>
+          <input id="note" type="text" />
+
           <button id="saveStudentBtn" class="btn" type="submit">✅ حفظ الطالب</button>
-          <button id="clearFormBtn" type="button" class="btn ghost">مسح الحقول</button>
         </div>
-      </div>
-    </form>
+      </form>
+    </div>
   </div>
 
-  <div style="min-width:320px" class="card">
-    <div style="display:flex;justify-content:space-between;align-items:center;">
-      <div><strong>طباعة / فلترة القائمة</strong></div>
-      <div style="display:flex;gap:8px;align-items:center">
-        <select id="filterStage" style="padding:8px;border-radius:8px;border:1px solid #e0e6ef">
-          <option value="">كل المراحل</option>
-        </select>
-        <select id="filterGroup" style="padding:8px;border-radius:8px;border:1px solid #e0e6ef">
-          <option value="">كل المجموعات</option>
-        </select>
-        <button id="printFilteredBtn" class="btn">🖨️ طباعة القائمة</button>
-      </div>
+  <!-- 🔹 قسم القائمة -->
+  <div class="card">
+    <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
+      <div><strong>قائمة الطلاب</strong> <span id="totalCount" class="badge">0</span></div>
     </div>
+
+    <table id="studentsTable">
+      <thead>
+        <tr>
+          <th>الاسم</th>
+          <th>الهاتف</th>
+          <th>المرحلة</th>
+          <th>المجموعة</th>
+          <th>المواد</th>
+          <th>الخيارات</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
   </div>
 </div>
 
-<!-- 🔒 تحقق من تسجيل الدخول -->
+<!-- 🔹 نافذة التفاصيل -->
+<div id="modal" class="modal" aria-hidden="true">
+  <div class="box">
+    <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px">
+      <strong id="modalTitle">تفاصيل الطالب</strong>
+      <button id="closeModal" class="btn ghost">إغلاق</button>
+    </div>
+    <div id="modalBody"></div>
+  </div>
+</div>
+
 <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-  import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+// ✅ Firebase & Auth
+import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
+import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyDt2HAOKr3iko8V-u392vh2R2my14km7ag",
-    authDomain: "oma2-d36fa.firebaseapp.com",
-    projectId: "oma2-d36fa",
-    storageBucket: "oma2-d36fa.firebasestorage.app",
-    messagingSenderId: "774171603105",
-    appId: "1:774171603105:web:91f2a5f44c4dde684080e0",
-    measurementId: "G-QHPZG4JLB8"
-  };
+const firebaseConfig = {
+  apiKey: "AIzaSyDt2HAOKr3iko8V-u392vh2R2my14km7ag",
+  authDomain: "oma2-d36fa.firebaseapp.com",
+  projectId: "oma2-d36fa",
+  storageBucket: "oma2-d36fa.firebasestorage.app",
+  messagingSenderId: "774171603105",
+  appId: "1:774171603105:web:91f2a5f44c4dde684080e0",
+  measurementId: "G-QHPZG4JLB8"
+};
 
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
 
-  // التحقق من المستخدم عند تحميل الصفحة
-  onAuthStateChanged(auth, (user) => {
-    if (!user) {
-      alert("يجب تسجيل الدخول أولاً ⚠️");
-      window.location.href = "login.html";
-    }
+// 🔒 حماية الصفحة - منع الدخول المباشر
+onAuthStateChanged(auth, (user) => {
+  if (!user) {
+    window.location.href = "login.html";
+  }
+});
+
+// 🔐 زر تسجيل الخروج
+document.getElementById("logoutBtn").addEventListener("click", async () => {
+  await signOut(auth);
+  window.location.href = "login.html";
+});
+
+// 🔹 تحميل الطلاب من Firestore
+const studentsTableBody = document.querySelector("#studentsTable tbody");
+async function loadStudents(){
+  const snapshot = await getDocs(collection(db,"students"));
+  studentsTableBody.innerHTML="";
+  snapshot.forEach(docSnap=>{
+    const student = docSnap.data();
+    const tr = document.createElement("tr");
+    tr.innerHTML = `
+      <td>${student.name}</td>
+      <td>${student.phone}</td>
+      <td>${student.stage}</td>
+      <td>${student.group}</td>
+      <td>${student.subjects ? student.subjects.map(s=>s.name).join(", ") : ""}</td>
+      <td>
+        <button class="btn small warn" onclick="deleteStudent('${docSnap.id}')">🗑️ حذف</button>
+      </td>
+    `;
+    studentsTableBody.appendChild(tr);
   });
-</script>
+}
+loadStudents();
 
-<!-- 🔹 كود إدارة الطلاب يبقى كما هو (يبدأ من هنا) -->
-<script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js";
-  import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
+// 🔹 حفظ طالب جديد
+const studentForm = document.getElementById("studentForm");
+studentForm.addEventListener("submit", async (e) => {
+  e.preventDefault();
+  const name = document.getElementById("name").value;
+  const phone = document.getElementById("phone").value;
+  const stage = document.getElementById("stage").value;
+  const group = document.getElementById("group").value;
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyDt2HAOKr3iko8V-u392vh2R2my14km7ag",
-    authDomain: "oma2-d36fa.firebaseapp.com",
-    projectId: "oma2-d36fa",
-    storageBucket: "oma2-d36fa.firebasestorage.app",
-    messagingSenderId: "774171603105",
-    appId: "1:774171603105:web:91f2a5f44c4dde684080e0",
-    measurementId: "G-QHPZG4JLB8"
-  };
+  await addDoc(collection(db, "students"), { name, phone, stage, group, createdAt:new Date() });
+  alert("✅ تم حفظ الطالب بنجاح");
+  studentForm.reset();
+  loadStudents();
+});
 
-  const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
-
-  // 🔹 هنا يبقى كود إدارة الطلاب كامل دون حذف أي شيء
-  // (أضفه هنا كما هو من نسختك الأصلية)
+// 🔹 حذف طالب
+window.deleteStudent = async (id) => {
+  if (confirm("هل تريد حذف الطالب؟")) {
+    await deleteDoc(doc(db, "students", id));
+    loadStudents();
+  }
+};
 </script>
 </body>
 </html>
